se agregaron 2 secciones mas en el index

--- a/index.html
+++ b/index.html
@@ -90,6 +90,57 @@
             </article>
         </div>
     </section>
+    <section class="proyectos">
+        <div class="proyectos__container">
+            <h2>Mirá mis últimos proyectos</h2>
+            <div class="proyectos__imgcont">
+                <div class="proyectos__img  kuki">
+                    <img src="./img/Kuki.jpg" alt="kuki pastelería">
+                </div>
+                <div class="proyectos__img  timestop">
+                    <img src="./img/Timestop.jpg" alt="timestop games">
+                </div>
+                <div class="proyectos__img  interwarp">
+                    <img src="./img/Interwarp.jpg" alt="interwarp servicios de internet">
+                </div>
+                <div class="proyectos__img  conan">
+                    <img src="./img/Conan.jpg" alt="cerveza conan">
+                </div>
+                <div class="proyectos__img  picky">
+                    <img src="./img/Pickyprinting.jpg" alt="picky printing">
+                </div>
+                <div class="proyectos__img  gilipollas">
+                    <img src="./img/Gilipollas.jpg" alt="boxers gilipollas">
+                </div>
+                <div class="proyectos__img  bedel">
+                    <img src="./img/Bedel.jpg" alt="grupo bedel inmobiliaria">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="habilidades">
+        <h2>Habilidades</h2>
+        <div class="habilidades__logos">
+            <div>
+                <img src="./img/logo illustrator.png" alt="logo adobe illustrator">
+            </div>
+            <div>
+                <img src="./img/logo photoshop.png" alt="logo adobe photoshop">
+            </div>
+            <div>
+                <img src="./img/logo premiere.png" alt="logo adobe premiere">
+            </div>
+            <div>
+                <img src="./img/logo after.png" alt="logo adobe after effects">
+            </div>
+            <div>
+                <img src="./img/logo corel.png" alt="logo corel draw">
+            </div>
+            <div>
+                <img src="./img/logo wordpress.png" alt="logo wordpress">
+            </div>
+        </div>
+    </section>
     <footer>
         <a href="https://www.facebook.com/cherry.oh.39" target="_blank">
             <img src="./img/icono-facebook.png" alt="icono con acceso a Facebook">
