se agregaron animaciones y estilos

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <ul class="nav-general">
                 <li>
-                    <a href="index.html" style="color: #f183c3;">INICIO</a>
+                    <a href="index.html">INICIO</a>
                 </li>
                 <li>
                     <a href="./section/historia.html">MI HISTORIA</a>
@@ -92,51 +92,58 @@
     </section>
     <section class="proyectos">
         <div class="proyectos__container">
-            <h2>Mirá mis últimos proyectos</h2>
+            <h2 class="proyectos__titulo">Mirá mis últimos proyectos</h2>
             <div class="proyectos__imgcont">
                 <div class="proyectos__img  kuki">
                     <img src="./img/Kuki.jpg" alt="kuki pastelería">
+                    <p class="proyectos__texto">Kuki pastelería y café </p>
                 </div>
                 <div class="proyectos__img  timestop">
                     <img src="./img/Timestop.jpg" alt="timestop games">
+                    <p class="proyectos__texto"> Timestop games</p>
                 </div>
                 <div class="proyectos__img  interwarp">
                     <img src="./img/Interwarp.jpg" alt="interwarp servicios de internet">
+                    <p class="proyectos__texto">Interwarp servicios de internet</p>
                 </div>
                 <div class="proyectos__img  conan">
                     <img src="./img/Conan.jpg" alt="cerveza conan">
+                    <p class="proyectos__texto">Cervezas Conan</p>
                 </div>
                 <div class="proyectos__img  picky">
                     <img src="./img/Pickyprinting.jpg" alt="picky printing">
+                    <p class="proyectos__texto">Picky printing</p>
                 </div>
                 <div class="proyectos__img  gilipollas">
                     <img src="./img/Gilipollas.jpg" alt="boxers gilipollas">
+                    <p class="proyectos__texto">Boxers Gilipollas</p>
                 </div>
                 <div class="proyectos__img  bedel">
                     <img src="./img/Bedel.jpg" alt="grupo bedel inmobiliaria">
+                    <p class="proyectos__texto">Grupo Bedel inmobiliaria</p>
                 </div>
             </div>
         </div>
     </section>
     <section class="habilidades">
-        <h2>Habilidades</h2>
+        <h2 class="habilidades__titulo">Habilidades</h2>
         <div class="habilidades__logos">
-            <div>
+            <div class="illustrator">
                 <img src="./img/logo illustrator.png" alt="logo adobe illustrator">
             </div>
-            <div>
+            <div class="photoshop">
                 <img src="./img/logo photoshop.png" alt="logo adobe photoshop">
             </div>
-            <div>
+            <div class="premiere">
                 <img src="./img/logo premiere.png" alt="logo adobe premiere">
             </div>
-            <div>
+            <div class="after">
                 <img src="./img/logo after.png" alt="logo adobe after effects">
             </div>
-            <div>
+            <div class="corel">
                 <img src="./img/logo corel.png" alt="logo corel draw">
             </div>
-            <div>
+            <div class="wordpress">
                 <img src="./img/logo wordpress.png" alt="logo wordpress">
             </div>
         </div>
