--- a/section/contacto.html
+++ b/section/contacto.html
@@ -19,7 +19,7 @@
                     <a href="historia.html">MI HISTORIA</a>
                 </li>
                 <li>
-                    <a href="contacto.html" style="color: #f183c3;">CONTACTO</a>
+                    <a href="contacto.html">CONTACTO</a>
                 </li>
             </ul>    
             <img src="../img/logo.png" alt="logo principal de la empresa">
