--- a/section/grafico.html
+++ b/section/grafico.html
@@ -28,7 +28,7 @@
                     <a href="ilustraciones.html">ILUSTRACIONES</a>
                 </li>
                 <li>
-                    <a href="grafico.html" style="color: #f183c3;">DISEÑO GRÁFICO</a> 
+                    <a href="grafico.html">DISEÑO GRÁFICO</a> 
                 </li>
                 <li>
                     <a href="web.html">DISEÑO WEB</a> 
