--- a/section/web.html
+++ b/section/web.html
@@ -31,7 +31,7 @@
                     <a href="grafico.html">DISEÑO GRÁFICO</a> 
                 </li>
                 <li>
-                    <a href="web.html" style="color: #f183c3;">DISEÑO WEB</a> 
+                    <a href="web.html">DISEÑO WEB</a> 
                 </li>
             </ul>
         </nav>
