--- a/section/historia.html
+++ b/section/historia.html
@@ -16,7 +16,7 @@
                     <a href="../index.html">INICIO</a>
                 </li>
                 <li>
-                    <a href="historia.html" style="color: #f183c3;">MI HISTORIA</a>
+                    <a href="historia.html">MI HISTORIA</a>
                 </li>
                 <li>
                     <a href="contacto.html">CONTACTO</a>
