--- a/section/ilustraciones.html
+++ b/section/ilustraciones.html
@@ -25,7 +25,7 @@
             <img src="../img/logo.png" alt="logo principal de la empresa">
             <ul class="nav-trabajos">    
                 <li>     
-                    <a href="ilustraciones.html" style="color: #f183c3;">ILUSTRACIONES</a>
+                    <a href="ilustraciones.html">ILUSTRACIONES</a>
                 </li>
                 <li>
                     <a href="grafico.html">DISEÑO GRÁFICO</a> 
