--- a/index.html
+++ b/index.html
@@ -4,57 +4,73 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/estilos.css">
     <link rel="icon" href="./img/logo.ico">
     <title>Inicio</title>
 </head>
 <body>
-
+<!--Header y navbar-->
     <header>
-        <nav>
-            <ul class="nav-general">
-                <li>
-                    <a href="index.html">INICIO</a>
-                </li>
-                <li>
-                    <a href="./section/historia.html">MI HISTORIA</a>
-                </li>
-                <li>
-                    <a href="./section/contacto.html">CONTACTO</a>
-                </li>
-            </ul>
-            <img src="./img/logo.png" alt="logo principal de la empresa" class="nav-logo">    
-            <ul class="nav-trabajos">   
-                <li>     
-                    <a href="./section/ilustraciones.html">ILUSTRACIONES</a>
-                </li>
-                <li>
-                    <a href="./section/grafico.html"> DISEÑO GRÁFICO</a> 
-                </li>
-                <li>
-                    <a href="./section/web.html">DISEÑO WEB</a> 
-                </li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-dark mx-auto">
+            <div class="container-fluid">
+                <div class="navbar-brand d-lg-none">
+                    <img src="./img/logo.png" alt="logo principal de la empresa" class="nav-logo"> 
+                </div>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">INICIO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./section/historia.html">MI HISTORIA</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./section/contacto.html">CONTACTO</a>
+                    </li>
+                </ul>
+                <div class="navbar-brand d-none d-lg-block">
+                    <img src="./img/logo.png" alt="logo principal de la empresa" class="nav-logo"> 
+                </div>
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="./section/ilustraciones.html">ILUSTRACIONES</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./section/grafico.html">GRÁFICA</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./section/web.html">DISEÑO WEB</a> 
+                    </li>
+                </ul>
+                </div>
+            </div>
         </nav>
     </header>
-    <article class="home-container">
-        <div class="home-banner">
-            <h1><span>¡Sé parte de mis </span>Nuevos Proyectos!</h1>
-            <div class="boton-banner">
-                <a href="./section/contacto.html" class="boton">QUIERO CONTACTARME</a>
+<!--Hero-->
+    <article class="hero-container">
+        <div class="hero-banner">
+            <p class="titulo-hero">¡Sé parte de mis<br><span>Nuevos Proyectos!</span></p>
+            <div class="boton-hero">
+                <a href="#start" class="boton">COMENZAR</a>
             </div>
         </div>
     </article>
-    <article class="conoceme">
+<!--Seccion Conoceme con acceso a la página Mi historia-->
+    <article class="conoceme" id="start">
         <div class="conoceme__foto-container">
             <img src="./img/mi-historia.png" alt="fotografía de la diseñadora" class="conoceme__foto">
         </div> 
-        <h2>¡Hola!<br>Soy Cherry</h2>
+        <h1>¡Hola!<br>Soy Cherry</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima recusandae ut dolores molestias accusantium fugiat vel alias blanditiis beatae et. Facere tenetur, minima veniam ducimus hic consectetur dolores magnam in?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima recusandae ut dolores molestias accusantium fugiat vel alias blanditiis beatae et. </p>
         <div>
             <a href="./section/historia.html" class="boton">MÁS SOBRE MI</a>
         </div>
     </article>
+    <!--
     <section class="trabajos-container">
         <h2 class="trabajos__titulo">Mis Servicios</h2>
         <div class="trabajos">
@@ -96,31 +112,31 @@
             <div class="proyectos__imgcont">
                 <div class="proyectos__img  kuki">
                     <img src="./img/Kuki.jpg" alt="kuki pastelería">
-                    <p class="proyectos__texto">Kuki pastelería y café </p>
+                    <p class="proyectos__texto contenedor__angosto">Kuki pastelería y café </p>
                 </div>
-                <div class="proyectos__img  timestop">
+                <div class="proyectos__img  timestop" >
                     <img src="./img/Timestop.jpg" alt="timestop games">
-                    <p class="proyectos__texto"> Timestop games</p>
+                    <p class="proyectos__texto contenedor__ancho"> Timestop games</p>
                 </div>
                 <div class="proyectos__img  interwarp">
                     <img src="./img/Interwarp.jpg" alt="interwarp servicios de internet">
-                    <p class="proyectos__texto">Interwarp servicios de internet</p>
+                    <p class="proyectos__texto contenedor__angosto">Interwarp servicios de internet</p>
                 </div>
                 <div class="proyectos__img  conan">
                     <img src="./img/Conan.jpg" alt="cerveza conan">
-                    <p class="proyectos__texto">Cervezas Conan</p>
+                    <p class="proyectos__texto contenedor__angosto">Cervezas Conan</p>
                 </div>
                 <div class="proyectos__img  picky">
                     <img src="./img/Pickyprinting.jpg" alt="picky printing">
-                    <p class="proyectos__texto">Picky printing</p>
+                    <p class="proyectos__texto contenedor__angosto">Picky printing</p>
                 </div>
                 <div class="proyectos__img  gilipollas">
                     <img src="./img/Gilipollas.jpg" alt="boxers gilipollas">
-                    <p class="proyectos__texto">Boxers Gilipollas</p>
+                    <p class="proyectos__texto contenedor__angosto">Boxers Gilipollas</p>
                 </div>
-                <div class="proyectos__img  bedel">
+                <div class="proyectos__img  bedel" >
                     <img src="./img/Bedel.jpg" alt="grupo bedel inmobiliaria">
-                    <p class="proyectos__texto">Grupo Bedel inmobiliaria</p>
+                    <p class="proyectos__texto contenedor__ancho">Grupo Bedel inmobiliaria</p>
                 </div>
             </div>
         </div>
@@ -159,14 +175,14 @@
             <ul>
                 <li>
                     <a href="index.html">INICIO</a>
-                </li>   
+                </li>
                 <li>
                     <a href="./section/historia.html">MI HISTORIA</a>
                 </li>
                 <li>
                     <a href="./section/contacto.html">CONTACTO</a>
                 </li>
-                <li>         
+                <li>
                     <a href="./section/ilustraciones.html">ILUSTRACIONES</a>
                 </li>
                 <li>
@@ -176,8 +192,10 @@
                     <a href="./section/web.html">DISEÑO WEB</a> 
                 </li>
             </ul>
-        </article>    
+        </article>
     </footer>
+ -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </body>
 </html>
