--- a/section/historia.html
+++ b/section/historia.html
@@ -4,36 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/estilos.css">
     <title>Historia</title>
 </head>
 <body>
-    
     <header>
-        <nav>
-            <ul class="nav-general">
-                <li>
-                    <a href="../index.html">INICIO</a>
-                </li>
-                <li>
-                    <a href="historia.html">MI HISTORIA</a>
-                </li>
-                <li>
-                    <a href="contacto.html">CONTACTO</a>
-                </li>
-            </ul>    
-            <img src="../img/logo.png" alt="logo principal de la empresa">
-            <ul class="nav-trabajos">    
-                <li>     
-                    <a href="ilustraciones.html">ILUSTRACIONES</a>
-                </li>
-                <li>
-                    <a href="grafico.html">DISEÑO GRÁFICO</a> 
-                </li>
-                <li>
-                    <a href="web.html">DISEÑO WEB</a> 
-                </li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-dark mx-auto">
+            <div class="container-fluid">
+                <div class="navbar-brand d-lg-none">
+                    <img src="../img/logo.png" alt="logo principal de la empresa" class="nav-logo"> 
+                </div>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">INICIO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../section/historia.html">MI HISTORIA</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../section/contacto.html">CONTACTO</a>
+                    </li>
+                </ul>
+                <div class="navbar-brand d-none d-lg-block">
+                    <img src="../img/logo.png" alt="logo principal de la empresa" class="nav-logo"> 
+                </div>
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../section/ilustraciones.html">ILUSTRACIONES</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../section/grafico.html">GRÁFICA</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../section/web.html">DISEÑO WEB</a> 
+                    </li>
+                </ul>
+                </div>
+            </div>
         </nav>
     </header>
     <div class="banner">
@@ -108,5 +120,7 @@
             </ul>
         </article>    
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
