se agregraron configuraciones de responsive

--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
 <!--Seccion Conoceme con acceso a la página Mi historia-->
     <article class="conoceme" id="start">
         <div class="conoceme__foto-container">
-            <img src="./img/mi-historia.png" alt="fotografía de la diseñadora" class="conoceme__foto">
+            <img src="./img/mi-historia.png" alt="fotografía de la diseñadora">
         </div> 
         <h1>¡Hola!<br>Soy Cherry</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima recusandae ut dolores molestias accusantium fugiat vel alias blanditiis beatae et. Facere tenetur, minima veniam ducimus hic consectetur dolores magnam in?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima recusandae ut dolores molestias accusantium fugiat vel alias blanditiis beatae et. </p>
-        <div>
+        <div class="boton-conoceme">
             <a href="./section/historia.html" class="boton">MÁS SOBRE MI</a>
         </div>
     </article>
-    <!--
+<!-- Seccion cartas de trabajos-->
     <section class="trabajos-container">
         <h2 class="trabajos__titulo">Mis Servicios</h2>
         <div class="trabajos">
@@ -106,41 +106,43 @@
             </article>
         </div>
     </section>
+<!-- Seccion de proyectos con galería-->
     <section class="proyectos">
         <div class="proyectos__container">
             <h2 class="proyectos__titulo">Mirá mis últimos proyectos</h2>
             <div class="proyectos__imgcont">
                 <div class="proyectos__img  kuki">
                     <img src="./img/Kuki.jpg" alt="kuki pastelería">
-                    <p class="proyectos__texto contenedor__angosto">Kuki pastelería y café </p>
+                    <p class="proyectos__texto">Kuki pastelería y café </p>
                 </div>
                 <div class="proyectos__img  timestop" >
                     <img src="./img/Timestop.jpg" alt="timestop games">
-                    <p class="proyectos__texto contenedor__ancho"> Timestop games</p>
+                    <p class="proyectos__texto"> Timestop games</p>
                 </div>
                 <div class="proyectos__img  interwarp">
                     <img src="./img/Interwarp.jpg" alt="interwarp servicios de internet">
-                    <p class="proyectos__texto contenedor__angosto">Interwarp servicios de internet</p>
+                    <p class="proyectos__texto">Interwarp servicios de internet</p>
                 </div>
                 <div class="proyectos__img  conan">
                     <img src="./img/Conan.jpg" alt="cerveza conan">
-                    <p class="proyectos__texto contenedor__angosto">Cervezas Conan</p>
+                    <p class="proyectos__texto">Cervezas Conan</p>
                 </div>
                 <div class="proyectos__img  picky">
                     <img src="./img/Pickyprinting.jpg" alt="picky printing">
-                    <p class="proyectos__texto contenedor__angosto">Picky printing</p>
+                    <p class="proyectos__texto">Picky printing</p>
                 </div>
                 <div class="proyectos__img  gilipollas">
                     <img src="./img/Gilipollas.jpg" alt="boxers gilipollas">
-                    <p class="proyectos__texto contenedor__angosto">Boxers Gilipollas</p>
+                    <p class="proyectos__texto">Boxers Gilipollas</p>
                 </div>
                 <div class="proyectos__img  bedel" >
                     <img src="./img/Bedel.jpg" alt="grupo bedel inmobiliaria">
-                    <p class="proyectos__texto contenedor__ancho">Grupo Bedel inmobiliaria</p>
+                    <p class="proyectos__texto">Grupo Bedel inmobiliaria</p>
                 </div>
             </div>
         </div>
     </section>
+<!--
     <section class="habilidades">
         <h2 class="habilidades__titulo">Habilidades</h2>
         <div class="habilidades__logos">
