se agregaron imagenes y se terminaron las modificaciones graficas del index

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/estilos.css">
-    <link rel="icon" href="./img/logo.ico">
+    <link rel="icon" href="./img/OhCherry-Fabicon.ico">
     <title>Inicio</title>
 </head>
 <body>
@@ -70,7 +70,7 @@
             <a href="./section/historia.html" class="boton">MÁS SOBRE MI</a>
         </div>
     </article>
-<!-- Seccion cartas de trabajos-->
+<!-- Seccion cartas de trabajos con acceso a las páginas de los diferentes trabajos-->
     <section class="trabajos-container">
         <h2 class="trabajos__titulo">Mis Servicios</h2>
         <div class="trabajos">
@@ -110,7 +110,7 @@
     <section class="proyectos">
         <div class="proyectos__container">
             <h2 class="proyectos__titulo">Mirá mis últimos proyectos</h2>
-            <div class="proyectos__imgcont">
+            <div class="proyectos__imgcont" >
                 <div class="proyectos__img  kuki">
                     <img src="./img/Kuki.jpg" alt="kuki pastelería">
                     <p class="proyectos__texto">Kuki pastelería y café </p>
@@ -142,7 +142,7 @@
             </div>
         </div>
     </section>
-<!--
+<!-- Seccion habilidades con animaciones-->
     <section class="habilidades">
         <h2 class="habilidades__titulo">Habilidades</h2>
         <div class="habilidades__logos">
@@ -166,14 +166,14 @@
             </div>
         </div>
     </section>
-    <footer>
-        <a href="https://www.facebook.com/cherry.oh.39" target="_blank">
-            <img src="./img/icono-facebook.png" alt="icono con acceso a Facebook">
-        </a>
-        <a href="https://www.instagram.com/ohcherry91/" target="_blank">
-            <img src="./img/icono-instagram.png" alt="icono con acceso a instagram">
-        </a>
-        <article>
+<!--Footer-->
+<footer>
+    <article class="footer__container">
+        <div class="footer__imgContainer">
+            <img src="./img/logo-footer.png" alt="logotipo de la empresa">
+        </div>
+        <div class="footer__paginas">
+            <h4>Páginas</h4>
             <ul>
                 <li>
                     <a href="index.html">INICIO</a>
@@ -194,9 +194,27 @@
                     <a href="./section/web.html">DISEÑO WEB</a> 
                 </li>
             </ul>
-        </article>
-    </footer>
- -->
+        </div>            
+        <div class="footer__contacto">
+            <h4>Contacto</h4>
+            <ul>
+                <li class="correo">  
+                    <p>oviedocarolina91@gmail.com</p>
+                </li>
+                <li class="celu">
+                    <p>3541-335996</p>
+                </li>
+                <li class="face">
+                    <p>@ohcherry</p>
+                </li>
+                <li class="insta">
+                    <p>@ohcherry</p>
+                </li>
+            </ul>
+        </div>
+    </article>
+</footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </body>
