--- a/section/contacto.html
+++ b/section/contacto.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/estilos.css">
+    <link rel="icon" href="../img/OhCherry-Fabicon.ico">
     <title>Contacto</title>
 </head>
 <body>
@@ -19,97 +20,90 @@
                 <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link" href="../index.html">INICIO</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../section/historia.html">MI HISTORIA</a>
+                        <a class="nav-link" href="./historia.html">MI HISTORIA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../section/contacto.html">CONTACTO</a>
+                        <a class="nav-link" href="./contacto.html">CONTACTO</a>
                     </li>
                 </ul>
                 <div class="navbar-brand d-none d-lg-block">
                     <img src="../img/logo.png" alt="logo principal de la empresa" class="nav-logo"> 
                 </div>
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="../section/ilustraciones.html">ILUSTRACIONES</a>
+                        <a class="nav-link" href="./ilustraciones.html">ILUSTRACIONES</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../section/grafico.html">GRÁFICA</a>
+                        <a class="nav-link" href="./grafico.html">GRÁFICA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../section/web.html">DISEÑO WEB</a> 
+                        <a class="nav-link" href="./web.html">DISEÑO WEB</a> 
                     </li>
                 </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <section class="contactform">
-		<article>
-			<form action="#">
-				<input type="text" placeholder="DECIME TU NOMBRE"><br>
-				<label for="email">Decime tu email:
-					<input type="email" placeholder="aaa@gmail.com" name="email"><br>
-				</label>
-				<label for="Observaciones"> Observaciones:<br>
-					<textarea placeholder="Observaciones"></textarea>
-				</label> <br>
-				<input type="number" placeholder="DECIME TU EDAD"><br>
-				<div><p>Elegí un lado:</p>
-					<div>Izquierda
-						<input type="radio" name="lado" value="izquierda">
-					</div>
-					<div>Derecha
-						<input type="radio" name="lado" value="derecha">
-					</div>
-				</div>
-				<p>Que letra te gusta mas?</p>
-				<select name="letra" id="letra"> 
-					<option value="x">X</option>
-					<option value="y">Y</option>
-					<option value="z">Z</option>
-				</select>
-				<div>Queres recibir info sobre nosotros?
-				<input type="checkbox" name="acepta" value="1"></div>
-				<input type="submit" value="PASAME LA DATA">
-				<input type="reset" value="RESETEAR">
-			</form>
-		</article>
-	</section>
+    <article class="hero__contacto">
+        <div class="hero__contacto--banner">
+            <h1 class="hero__contacto--titulo">Contacto</h1>
+        </div>
+    </article>
+    <section class="contactform__container">
+
+    </section>
     <!-- formulario de contacto pasado en clases -->
     <footer>
-        <a href="https://www.facebook.com/cherry.oh.39" target="_blank">
-            <img src="../img/icono-facebook.png" alt="icono con acceso a Facebook">
-        </a>
-        <a href="https://www.instagram.com/ohcherry91/" target="_blank">
-            <img src="../img/icono-instagram.png" alt="icono con acceso a instagram">
-        </a>
-        <article>
-            <ul>
-                <li>
-                    <a href="../index.html">INICIO</a>
-                </li>   
-                <li>
-                    <a href="historia.html">MI HISTORIA</a>
-                </li>
-                <li>
-                    <a href="contacto.html">CONTACTO</a>
-                </li>
-                <li>         
-                    <a href="ilustraciones.html">ILUSTRACIONES</a>
-                </li>
-                <li>
-                    <a href="grafico.html">GRÁFICA</a> 
-                </li>
-                <li>
-                    <a href="web.html">DISEÑO WEB</a> 
-                </li>
-            </ul>
-        </article>    
+        <article class="footer__container">
+            <div class="footer__imgContainer">
+                <img src="../img/logo-footer.png" alt="logotipo de la empresa">
+            </div>
+            <div class="footer__paginas">
+                <h4>Páginas</h4>
+                <ul>
+                    <li>
+                        <a href="../index.html">INICIO</a>
+                    </li>
+                    <li>
+                        <a href="./historia.html">MI HISTORIA</a>
+                    </li>
+                    <li>
+                        <a href="./contacto.html">CONTACTO</a>
+                    </li>
+                    <li>
+                        <a href="./ilustraciones.html">ILUSTRACIONES</a>
+                    </li>
+                    <li>
+                        <a href="./grafico.html">GRÁFICA</a> 
+                    </li>
+                    <li>
+                        <a href="./web.html">DISEÑO WEB</a> 
+                    </li>
+                </ul>
+            </div>            
+            <div class="footer__contacto">
+                <h4>Contacto</h4>
+                <ul>
+                    <li class="correo">  
+                        <p>oviedocarolina91@gmail.com</p>
+                    </li>
+                    <li class="celu">
+                        <p>3541-335996</p>
+                    </li>
+                    <li class="face">
+                        <p>@ohcherry</p>
+                    </li>
+                    <li class="insta">
+                        <p>@ohcherry</p>
+                    </li>
+                </ul>
+            </div>
+        </article>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
