--- a/section/ilustraciones.html
+++ b/section/ilustraciones.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/estilos.css">
+    <link rel="icon" href="../img/OhCherry-Fabicon.ico">
     <title>Ilustraciones</title>
 </head>
 <body>
@@ -24,10 +25,10 @@
                         <a class="nav-link" href="../index.html">INICIO</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../section/historia.html">MI HISTORIA</a>
+                        <a class="nav-link" href="./historia.html">MI HISTORIA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../section/contacto.html">CONTACTO</a>
+                        <a class="nav-link" href="./contacto.html">CONTACTO</a>
                     </li>
                 </ul>
                 <div class="navbar-brand d-none d-lg-block">
@@ -35,13 +36,13 @@
                 </div>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="../section/ilustraciones.html">ILUSTRACIONES</a>
+                        <a class="nav-link" href="./ilustraciones.html">ILUSTRACIONES</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../section/grafico.html">GRÁFICA</a>
+                        <a class="nav-link" href="./grafico.html">GRÁFICA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../section/web.html">DISEÑO WEB</a> 
+                        <a class="nav-link" href="./web.html">DISEÑO WEB</a> 
                     </li>
                 </ul>
                 </div>
@@ -105,34 +106,51 @@
         </article>
     </section>
     <footer>
-        <a href="https://www.facebook.com/cherry.oh.39" target="_blank">
-            <img src="../img/icono-facebook.png" alt="icono con acceso a Facebook">
-        </a>
-        <a href="https://www.instagram.com/ohcherry91/" target="_blank">
-            <img src="../img/icono-instagram.png" alt="icono con acceso a instagram">
-        </a>
-        <article>
-            <ul>
-                <li>
-                    <a href="../index.html">INICIO</a>
-                </li>   
-                <li>
-                    <a href="historia.html">MI HISTORIA</a>
-                </li>
-                <li>
-                    <a href="contacto.html">CONTACTO</a>
-                </li>
-                <li>         
-                    <a href="ilustraciones.html">ILUSTRACIONES</a>
-                </li>
-                <li>
-                    <a href="grafico.html">GRÁFICA</a> 
-                </li>
-                <li>
-                    <a href="web.html">DISEÑO WEB</a> 
-                </li>
-            </ul>
-        </article>    
+        <article class="footer__container">
+            <div class="footer__imgContainer">
+                <img src="../img/logo-footer.png" alt="logotipo de la empresa">
+            </div>
+            <div class="footer__paginas">
+                <h4>Páginas</h4>
+                <ul>
+                    <li>
+                        <a href="../index.html">INICIO</a>
+                    </li>
+                    <li>
+                        <a href="./historia.html">MI HISTORIA</a>
+                    </li>
+                    <li>
+                        <a href="./contacto.html">CONTACTO</a>
+                    </li>
+                    <li>
+                        <a href="./ilustraciones.html">ILUSTRACIONES</a>
+                    </li>
+                    <li>
+                        <a href="./grafico.html">GRÁFICA</a> 
+                    </li>
+                    <li>
+                        <a href="./web.html">DISEÑO WEB</a> 
+                    </li>
+                </ul>
+            </div>            
+            <div class="footer__contacto">
+                <h4>Contacto</h4>
+                <ul>
+                    <li class="correo">  
+                        <p>oviedocarolina91@gmail.com</p>
+                    </li>
+                    <li class="celu">
+                        <p>3541-335996</p>
+                    </li>
+                    <li class="face">
+                        <p>@ohcherry</p>
+                    </li>
+                    <li class="insta">
+                        <p>@ohcherry</p>
+                    </li>
+                </ul>
+            </div>
+        </article>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
