se termino de estruturar la seccion historia

--- a/section/contacto.html
+++ b/section/contacto.html
@@ -80,6 +80,32 @@
             <button class="btn btn-primary" type="submit">Enviar</button>
         </div>
     </section>
+    <section class="contacto__section row">
+        <div class="contacto__logos--container col-6 col-sm-3">
+            <div class="contacto__logo">
+                <img src="../img/Correo blanco.png" alt="logo de correo electronico">
+            </div>
+            <h3>oviedocarolina91@gmail.com</h3>
+        </div>
+        <div class="contacto__logos--container col-6 col-sm-3">
+            <div class="contacto__logo">
+                <img src="../img/what blanco.png" alt="logo de whatsapp">
+            </div>
+            <h3>3541-335996</h3>
+        </div>
+        <div class="contacto__logos--container col-6 col-sm-3">
+            <div class="contacto__logo">
+                <img src="../img/insta blanco.png" alt="logo de instagram">
+            </div>
+            <h3>@ohcherry</h3>
+        </div>
+        <div class="contacto__logos--container col-6 col-sm-3">
+            <div class="contacto__logo">
+                <img src="../img/Face blanco.png" alt="logo de facebook">
+            </div>
+            <h3>@ohcherry</h3>
+        </div>
+    </section>
     <footer>
         <article class="footer__container">
             <div class="footer__imgContainer">
