--- a/section/historia.html
+++ b/section/historia.html
@@ -49,48 +49,56 @@
             </div>
         </nav>
     </header>
-    <div class="banner">
-        <h1>Conocé un poco más de mi</h1>
-        <img src="" alt="">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam pariatur quaerat magnam veritatis libero quae vel repellendus nostrum facilis nam cumque quasi suscipit mollitia autem atque, sapiente eos amet tempore!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam pariatur quaerat magnam veritatis libero quae vel repellendus nostrum facilis nam cumque quasi suscipit mollitia autem atque, sapiente eos amet tempore!</p>
-        <div class="boton-banner">
-            <a href="contacto.html" class="boton">QUIERO CONTACTARME</a>
+    <article class="hero__historia">
+        <div class="hero__historia--banner">
+            <h1 class="hero__historia--titulo">Mi Historia</h1>
         </div>
-    </div>
-    <section class="trabajos">
-        <h2 class="trabajos__titulo">Mis Servicios</h2>
-        <article class="trabajos__ind">
-            <div>    
-                <img src="../img/ilustraciones.png" alt="icono con acceso a la seccion ilustraciones" class="trabajos__ind--iconos">
-            </div>
-            <H3>Ilustraciones</H3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur consequatur eos, unde labore fugit quos ipsa odio incidunt excepturi distinctio facere impedit veritatis iure neque tenetur modi optio ea deserunt?</p>
-            <div>
-                <a href="../section/ilustraciones.html" class="boton">VER MÁS</a>
-            </div>
-        </article>
-        <article class="trabajos__ind">
-            <div>
-                <img src="../img/grafica.png" alt="icono con acceso a la seccion de diseño Gráfico" class="trabajos__ind--iconos">
-            </div>
-            <h3>Diseño Gráfico</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam odit sequi aut quod blanditiis, ipsa repudiandae maiores minima deserunt minus exercitationem molestiae atque dolor explicabo possimus ducimus harum rem laudantium.</p>
-            <div>
-                <a href="../section/grafico.html" class="boton">VER MÁS</a>
-            </div>
-        </article>
-        <article class="trabajos__ind">
-            <div>
-                <img src="../img/web.png" alt="icono con acceso a la seccion de diseño web" class="trabajos__ind--iconos">
-            </div>
-            <h3>Diseño Web</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus, placeat magni quibusdam libero quae labore suscipit veritatis eveniet ad doloremque repellendus iusto molestias repellat soluta mollitia numquam nobis fugit atque.</p>
-            <div>
-                <a href="../section/web.html" class="boton">VER MÁS</a>
-            </div>
-        </article>
+    </article> 
+    <section class="sobreMi">
+        <h2>Sobre Mí</h2>
+        <div>
+            <img src="../img/mi-historia.png" alt="fotografía de la diseñadora">
+        </div>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit repudiandae soluta, aliquid enim cupiditate molestiae consequatur. Rerum, commodi a alias quos est doloribus numquam minus voluptatem, blanditiis labore veritatis optio!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit repudiandae soluta, aliquid enim cupiditate molestiae consequatur. Rerum, commodi a alias quos est doloribus numquam minus voluptatem, blanditiis labore veritatis optio!</p>
     </section>
-    </div>
+    <section class="trayectoria">
+        <h2>Trayectoria</h2>
+        <div>
+            <img src="../img/Foto contacto.png" alt="fotografía de la diseñadora">
+        </div>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit repudiandae soluta, aliquid enim cupiditate molestiae consequatur. Rerum, commodi a alias quos est doloribus numquam minus voluptatem, blanditiis labore veritatis optio!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit repudiandae soluta, aliquid enim cupiditate molestiae consequatur. Rerum, commodi a alias quos est doloribus numquam minus voluptatem, blanditiis labore veritatis optio!</p>
+    </section>
+    <section class="conocimietos">
+        <h2>Conocimientos</h2>
+        <div>
+            <img src="../img/Foto contacto.png" alt="fotografía de la diseñadora">
+        </div>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit repudiandae soluta, aliquid enim cupiditate molestiae consequatur.</p>
+        <div>
+            <img src="../img/ilustraciones.png" alt="icono de referencia a conocimientos que tiene la diseñadora">
+            <h3>Redes Sociales</h3>
+        </div>
+        <div>
+            <img src="../img/ilustraciones.png" alt="icono de referencia a conocimientos que tiene la diseñadora">
+            <h3>Redes Sociales</h3>
+        </div>
+        <div>
+            <img src="../img/ilustraciones.png" alt="icono de referencia a conocimientos que tiene la diseñadora">
+            <h3>Redes Sociales</h3>
+        </div>
+        <div>
+            <img src="../img/ilustraciones.png" alt="icono de referencia a conocimientos que tiene la diseñadora">
+            <h3>Redes Sociales</h3>
+        </div>
+        <div>
+            <img src="../img/ilustraciones.png" alt="icono de referencia a conocimientos que tiene la diseñadora">
+            <h3>Redes Sociales</h3>
+        </div>
+        <div>
+            <img src="../img/ilustraciones.png" alt="icono de referencia a conocimientos que tiene la diseñadora">
+            <h3>Redes Sociales</h3>
+        </div>
+    </section>
     <footer>
         <article class="footer__container">
             <div class="footer__imgContainer">
