--- a/section/historia.html
+++ b/section/historia.html
@@ -10,6 +10,7 @@
     <title>Historia</title>
 </head>
 <body>
+<!--header con navbar de bootstrap-->
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark mx-auto">
             <div class="container-fluid">
@@ -49,56 +50,77 @@
             </div>
         </nav>
     </header>
+<!--Hero Historia-->
     <article class="hero__historia">
         <div class="hero__historia--banner">
             <h1 class="hero__historia--titulo">Mi Historia</h1>
         </div>
-    </article> 
+    </article>
+<!--Seccion con informacion personal-->
     <section class="sobreMi">
         <h2>Sobre Mí</h2>
-        <div>
+        <div class="sobreMi__img mx-auto">
             <img src="../img/mi-historia.png" alt="fotografía de la diseñadora">
         </div>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit repudiandae soluta, aliquid enim cupiditate molestiae consequatur. Rerum, commodi a alias quos est doloribus numquam minus voluptatem, blanditiis labore veritatis optio!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit repudiandae soluta, aliquid enim cupiditate molestiae consequatur. Rerum, commodi a alias quos est doloribus numquam minus voluptatem, blanditiis labore veritatis optio!</p>
     </section>
+<!--Seccion de trayectoria-->
     <section class="trayectoria">
         <h2>Trayectoria</h2>
-        <div>
+        <div class="trayectoria__img mx-auto">
             <img src="../img/Foto contacto.png" alt="fotografía de la diseñadora">
         </div>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit repudiandae soluta, aliquid enim cupiditate molestiae consequatur. Rerum, commodi a alias quos est doloribus numquam minus voluptatem, blanditiis labore veritatis optio!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit repudiandae soluta, aliquid enim cupiditate molestiae consequatur. Rerum, commodi a alias quos est doloribus numquam minus voluptatem, blanditiis labore veritatis optio!</p>
     </section>
-    <section class="conocimietos">
-        <h2>Conocimientos</h2>
-        <div>
-            <img src="../img/Foto contacto.png" alt="fotografía de la diseñadora">
-        </div>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit repudiandae soluta, aliquid enim cupiditate molestiae consequatur.</p>
-        <div>
-            <img src="../img/ilustraciones.png" alt="icono de referencia a conocimientos que tiene la diseñadora">
-            <h3>Redes Sociales</h3>
-        </div>
-        <div>
-            <img src="../img/ilustraciones.png" alt="icono de referencia a conocimientos que tiene la diseñadora">
-            <h3>Redes Sociales</h3>
-        </div>
-        <div>
-            <img src="../img/ilustraciones.png" alt="icono de referencia a conocimientos que tiene la diseñadora">
-            <h3>Redes Sociales</h3>
-        </div>
-        <div>
-            <img src="../img/ilustraciones.png" alt="icono de referencia a conocimientos que tiene la diseñadora">
-            <h3>Redes Sociales</h3>
-        </div>
-        <div>
-            <img src="../img/ilustraciones.png" alt="icono de referencia a conocimientos que tiene la diseñadora">
-            <h3>Redes Sociales</h3>
-        </div>
-        <div>
-            <img src="../img/ilustraciones.png" alt="icono de referencia a conocimientos que tiene la diseñadora">
-            <h3>Redes Sociales</h3>
-        </div>
+<!--Seccion de conocimientos-->
+    <section class="conocimientos">
+        <div class="container">
+            <h2>Conocimientos</h2>
+            <div class="conocimientos__foto">
+                <img src="../img/Foto contacto.png" alt="fotografía de la diseñadora">
+            </div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit repudiandae soluta, aliquid enim cupiditate molestiae consequatur.</p>
+            <div class="conocimientos__logo--container row">
+                <div class="conocimientos__logo col-6">
+                    <div class="conocimientos__img">
+                        <img src="../img/ilustraciones.png" alt="icono de referencia a conocimientos que tiene la diseñadora">
+                    </div>
+                    <h3>Redes Sociales</h3>
+                </div>        
+                <div class="conocimientos__logo col-6">
+                    <div class="conocimientos__img">
+                        <img src="../img/ilustraciones.png" alt="icono de referencia a conocimientos que tiene la diseñadora">
+                    </div>
+                    <h3>Redes Sociales</h3>
+                </div>
+                <div class="conocimientos__logo col-6">
+                    <div class="conocimientos__img">
+                        <img src="../img/ilustraciones.png" alt="icono de referencia a conocimientos que tiene la diseñadora">
+                    </div>
+                    <h3>Redes Sociales</h3>
+                </div>
+                <div class="conocimientos__logo col-6">
+                    <div class="conocimientos__img">
+                        <img src="../img/ilustraciones.png" alt="icono de referencia a conocimientos que tiene la diseñadora">
+                    </div>
+                    <h3>Redes Sociales</h3>
+                </div>
+                <div class="conocimientos__logo col-6">
+                    <div class="conocimientos__img">
+                        <img src="../img/ilustraciones.png" alt="icono de referencia a conocimientos que tiene la diseñadora">
+                    </div>
+                    <h3>Redes Sociales</h3>
+                </div>
+                <div class="conocimientos__logo col-6">
+                    <div class="conocimientos__img">
+                        <img src="../img/ilustraciones.png" alt="icono de referencia a conocimientos que tiene la diseñadora">
+                    </div>
+                    <h3>Redes Sociales</h3>
+                </div>
+            </div>
+        </div>    
     </section>
+<!--footer-->
     <footer>
         <article class="footer__container">
             <div class="footer__imgContainer">
