se ajustaron medidas de responisve

--- a/section/grafico.html
+++ b/section/grafico.html
@@ -126,7 +126,7 @@
                 <h4>Contacto</h4>
                 <ul>
                     <li class="correo">  
-                        <p>oviedocarolina91@gmail.com</p>
+                        <p>ohcherry91@gmail.com</p>
                     </li>
                     <li class="celu">
                         <p>3541-335996</p>
