--- a/section/historia.html
+++ b/section/historia.html
@@ -75,7 +75,7 @@
 <!--Seccion de conocimientos-->
     <section class="conocimientos">
         <div class="container">
-            <h2>Conocimientos</h2>
+            <h2 class="conocimientos__titulo">Conocimientos</h2>
             <div class="conocimientos__foto">
                 <img src="../img/Foto contacto.png" alt="fotografía de la diseñadora">
             </div>
@@ -153,7 +153,7 @@
                 <h4>Contacto</h4>
                 <ul>
                     <li class="correo">  
-                        <p>oviedocarolina91@gmail.com</p>
+                        <p>ohcherry91@gmail.com</p>
                     </li>
                     <li class="celu">
                         <p>3541-335996</p>
