--- a/section/contacto.html
+++ b/section/contacto.html
@@ -85,7 +85,7 @@
             <div class="contacto__logo">
                 <img src="../img/Correo blanco.png" alt="logo de correo electronico">
             </div>
-            <h3>oviedocarolina91@gmail.com</h3>
+            <h3>ohcherry91@gmail.com</h3>
         </div>
         <div class="contacto__logos--container col-6 col-sm-3">
             <div class="contacto__logo">
@@ -138,7 +138,7 @@
                 <h4>Contacto</h4>
                 <ul>
                     <li class="correo">  
-                        <p>oviedocarolina91@gmail.com</p>
+                        <p>ohcherry91@gmail.com</p>
                     </li>
                     <li class="celu">
                         <p>3541-335996</p>
