se agregaron fotos y videos en  la seccion ilustracione

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
     </article>
 <!--Seccion Conoceme con acceso a la página Mi historia-->
-    <article class="conoceme" id="start">
+    <article class="conoceme mx-auto" id="start">
         <div class="conoceme__foto-container">
             <img src="./img/mi-historia.png" alt="fotografía de la diseñadora">
         </div> 
@@ -168,7 +168,7 @@
     </section>
 <!--Footer-->
 <footer>
-    <article class="footer__container">
+    <article class="footer__container mx-auto">
         <div class="footer__imgContainer">
             <img src="./img/logo-footer.png" alt="logotipo de la empresa">
         </div>
