--- a/section/contacto.html
+++ b/section/contacto.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="../img/OhCherry-Fabicon.ico">
     <title>Contacto</title>
 </head>
-<body class="body-con">
+<body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark mx-auto">
             <div class="container-fluid">
@@ -50,7 +50,7 @@
         </nav>
     </header>
     <article class="hero__contacto">
-        <div class="hero__contacto--banner">
+        <div class="hero__contacto--banner mx-auto">
             <h1 class="hero__contacto--titulo">Contacto</h1>
         </div>
     </article> 
@@ -80,7 +80,7 @@
             <button class="btn btn-primary" type="submit">Enviar</button>
         </div>
     </section>
-    <section class="contacto__section row">
+    <section class="contacto__section row mx-auto">
         <div class="contacto__logos--container col-6 col-sm-3">
             <div class="contacto__logo">
                 <img src="../img/Correo blanco.png" alt="logo de correo electronico">
@@ -107,7 +107,7 @@
         </div>
     </section>
     <footer>
-        <article class="footer__container">
+        <article class="footer__container mx-auto">
             <div class="footer__imgContainer">
                 <img src="../img/logo-footer.png" alt="logotipo de la empresa">
             </div>
