--- a/section/historia.html
+++ b/section/historia.html
@@ -21,7 +21,7 @@
                 <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link" href="../index.html">INICIO</a>
                     </li>
@@ -35,7 +35,7 @@
                 <div class="navbar-brand d-none d-lg-block">
                     <img src="../img/logo.png" alt="logo principal de la empresa" class="nav-logo"> 
                 </div>
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link" href="./ilustraciones.html">ILUSTRACIONES</a>
                     </li>
@@ -52,12 +52,12 @@
     </header>
 <!--Hero Historia-->
     <article class="hero__historia">
-        <div class="hero__historia--banner">
+        <div class="hero__historia--banner mx-auto">
             <h1 class="hero__historia--titulo">Mi Historia</h1>
         </div>
     </article>
 <!--Seccion con informacion personal-->
-    <section class="sobreMi">
+    <section class="sobreMi mx-auto">
         <h2>Sobre Mí</h2>
         <div class="sobreMi__img mx-auto">
             <img src="../img/mi-historia.png" alt="fotografía de la diseñadora">
@@ -65,7 +65,7 @@
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit repudiandae soluta, aliquid enim cupiditate molestiae consequatur. Rerum, commodi a alias quos est doloribus numquam minus voluptatem, blanditiis labore veritatis optio!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit repudiandae soluta, aliquid enim cupiditate molestiae consequatur. Rerum, commodi a alias quos est doloribus numquam minus voluptatem, blanditiis labore veritatis optio!</p>
     </section>
 <!--Seccion de trayectoria-->
-    <section class="trayectoria">
+    <section class="trayectoria mx-auto">
         <h2>Trayectoria</h2>
         <div class="trayectoria__img mx-auto">
             <img src="../img/Foto contacto.png" alt="fotografía de la diseñadora">
@@ -122,7 +122,7 @@
     </section>
 <!--footer-->
     <footer>
-        <article class="footer__container">
+        <article class="footer__container mx-auto">
             <div class="footer__imgContainer">
                 <img src="../img/logo-footer.png" alt="logotipo de la empresa">
             </div>
