--- a/section/grafico.html
+++ b/section/grafico.html
@@ -95,7 +95,7 @@
         </article>
     </section>
     <footer>
-        <article class="footer__container">
+        <article class="footer__container mx-auto">
             <div class="footer__imgContainer">
                 <img src="../img/logo-footer.png" alt="logotipo de la empresa">
             </div>
