--- a/section/ilustraciones.html
+++ b/section/ilustraciones.html
@@ -49,64 +49,82 @@
             </div>
         </nav>
     </header>
-    </header>
-    <section class="banner">
-        <h1>¡Mis Ilustraciones!</h1>
-        <div>
-            <img src="" alt="">
+    <article class="hero__historia">
+        <div class="hero__historia--banner mx-auto">
+            <h1 class="hero__historia--titulo">Ilustraciones</h1>
         </div>
-        <div>
-            <img src="" alt="">
-        </div>
-        <div>
-            <img src="" alt="">
-        </div>
-    </section>
+    </article>
     <section>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, facilis rerum. Eligendi aspernatur ab esse! Cum architecto velit quam, odio labore ipsa unde, corporis, hic consequuntur a voluptatem distinctio reprehenderit.
-        </p>
-        <iframe src="" frameborder="0"></iframe>
-        <div class="boton-banner">
-            <a href="contacto.html" class="boton">QUIERO CONTACTARME</a>
+        <div>
+            <h2>Trabajos</h2>
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                    <img src="../img/ilus-time.jpg" class="d-block w-100" alt="ilustracion de robot">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Timestop Games</h5>
+                        <p>Empresa desarrolladora de videojuegos</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="../img/ilus-gili.jpg" class="d-block w-100" alt="ilustracion de personajes varios">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Gilipollas</h5>
+                        <p>Fabrica de boxers</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="../img/ilus-conan.jpg" class="d-block w-100" alt="ilustracion de vikingo">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Cervezas Conan</h5>
+                        <p>Cerveceria artesanal</p>
+                    </div>
+                </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
         </div>
     </section>
     <section>
         <article>
-            <di>
-                <img src="" alt="">
-            </div>
-            <div>
-                <img src="" alt="">
-            </div>
-            <div>
-                <img src="" alt="">
-            </div>
-            <div>
-                <img src="" alt="">
-            </div>
-            <div>
-                <img src="" alt="">
-            </div>
-            <div>
-                <img src="" alt="">
-            </div>
-            <div>
-                <img src="" alt="">
-            </div>
-            <div>
-                <img src="" alt="">
-            </div>
-            <div>
-                <img src="" alt="">
-            </div>
-            <div>
-                <img src="" alt="">
+            <h2>Tu Proyecto animado</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio.</p>
+            <div class="video__container">
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Iu4PiZbq9GI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </article>
     </section>
+    <section>
+        <h2>Ellos me eligieron</h2>
+        <div class="ilustraciones__logo--container">
+            <div class="ilustraciones__logo">
+                <img src="../img/logo-Magico.jpg" alt="mundo magico jugueteria">
+            </div>
+            <div class="ilustraciones__logo">
+                <img src="../img/logo-MrCoco.jpg" alt="mr coco bar">
+            </div>
+            <div class="ilustraciones__logo">
+                <img src="../img/logo-Wapas.jpg" alt="wapas zapateria">
+            </div>
+            <div class="ilustraciones__logo">
+                <img src="../img/logo-sabores.jpg" alt="sabores panaderia">
+            </div>
+        </div>
+    </section>
     <footer>
-        <article class="footer__container">
+        <article class="footer__container mx-auto">
             <div class="footer__imgContainer">
                 <img src="../img/logo-footer.png" alt="logotipo de la empresa">
             </div>
