--- a/section/web.html
+++ b/section/web.html
@@ -66,7 +66,7 @@
         </div>
     </section>
     <footer>
-        <article class="footer__container">
+        <article class="footer__container mx-auto">
             <div class="footer__imgContainer">
                 <img src="../img/logo-footer.png" alt="logotipo de la empresa">
             </div>
