se ajustaron medidas de responsive

--- a/section/ilustraciones.html
+++ b/section/ilustraciones.html
@@ -49,14 +49,14 @@
             </div>
         </nav>
     </header>
-    <article class="hero__historia">
-        <div class="hero__historia--banner mx-auto">
-            <h1 class="hero__historia--titulo">Ilustraciones</h1>
+    <article class="hero__ilustraciones">
+        <div class="hero__ilustraciones--banner mx-auto">
+            <h1 class="hero__ilustraciones--titulo">Ilustraciones</h1>
         </div>
     </article>
     <section>
         <div>
-            <h2>Trabajos</h2>
+            <h2>Trabajos de Ilustraciones</h2>
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
