--- a/section/web.html
+++ b/section/web.html
@@ -49,20 +49,78 @@
             </div>
         </nav>
     </header>
-    <section class="banner">
-        <h1>Diseño Web</h1>
-        <div>
-            <img src="" alt="">
+    <article class="hero__web">
+        <div class="hero__web--banner mx-auto">
+            <h1 class="hero__web--titulo">Diseño Web</h1>
         </div>
+    </article>
+    <section>
         <div>
-            <img src="" alt="">
+            <h2>Paginas y redes</h2>
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                    <img src="../img/web sumicons.jpg" class="d-block w-100" alt="vista previa de como se veria la web de la empresa">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Sumicons</h5>
+                        <p>suministros y construccion</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="../img/web-interwarp.jpg" class="d-block w-100" alt="vista previa de como se veria la web de la empresa">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>InterWarp</h5>
+                        <p>servicios de telecomunicaciones</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="../img/web-planner.jpg" class="d-block w-100" alt="vista previa de como se veria la web de la empresa">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Planner Point</h5>
+                        <p>invitaciones digitales</p>
+                    </div>
+                </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
         </div>
     </section>
     <section>
-        <iframe src="" frameborder="0"></iframe>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus corporis saepe tempore cupiditate velit vel est in error dolorum aliquid, neque fugiat beatae dolore molestiae voluptates quibusdam facilis quidem! Saepe?</p>
-        <div class="boton-banner">
-            <a href="contacto.html" class="boton">QUIERO CONTACTARME</a>
+        <article>
+            <h2>Páginas modernas y responsive</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio.</p>
+            <div class="video__container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/dyKDFkCLcDs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </article>
+    </section>
+    <section>
+        <h2>Ellos me eligieron</h2>
+        <div class="web__logo--container">
+            <div class="web__logo">
+                <img src="../img/grafico-global.jpg" alt="global consultora">
+            </div>
+            <div class="web__logo">
+                <img src="../img/grafico-interwarp.jpg" alt="interwarp telecomunicaciones">
+            </div>
+            <div class="web__logo">
+                <img src="../img/grafico-ofertone.jpg" alt="ofertones e-shop">
+            </div>
+            <div class="web__logo">
+                <img src="../img/grafico-optima.jpg" alt="optima 3d arquitectura">
+            </div>
         </div>
     </section>
     <footer>
