--- a/section/grafico.html
+++ b/section/grafico.html
@@ -49,50 +49,79 @@
             </div>
         </nav>
     </header>
-    <section class="banner">
-        <h1>Diseño Gráfico</h1>
-        <img src="" alt="">
-    </section>
+    <article class="hero__grafico">
+        <div class="hero__grafico--banner mx-auto">
+            <h1 class="hero__grafico--titulo">Gráfico</h1>
+        </div>
+    </article>
     <section>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/tHGx6TJEPZs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident blanditiis consequatur id commodi distinctio velit aspernatur quas tenetur soluta culpa libero temporibus, optio laudantium illum fuga debitis natus. Consectetur, cupiditate.</p>
-        <div class="boton-banner">
-            <a href="contacto.html" class="boton">QUIERO CONTACTARME</a>
+        <div>
+            <h2>Trabajos de Diseño Gráfico</h2>
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                    <img src="../img/grafico-gili.jpg" class="d-block w-100" alt="trabajo grafico para gilipollas">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Gilipollas</h5>
+                        <p>Fabrica de boxers</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="../img/grafico-kuki.jpg" class="d-block w-100" alt="trabajo grafico para kuki">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Kuki</h5>
+                        <p>Pasteleria y café</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="../img/grafico-picky.jpg" class="d-block w-100" alt="trabajo grafico para gilipollas">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Picky Printing</h5>
+                        <p>Taller serigráfico</p>
+                    </div>
+                </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
         </div>
     </section>
     <section>
         <article>
-            <div>
-                <img src="" alt="">
-            </div>
-            <div>
-                <img src="" alt="">
-            </div>
-            <div>
-                <img src="" alt="">
-            </div>
-            <div>
-                <img src="" alt="">
-            </div>
-            <div>
-                <img src="" alt="">
-            </div>
-            <div>
-                <img src="" alt="">
-            </div>
-            <div>
-                <img src="" alt="">
-            </div>
-            <div>
-                <img src="" alt="">
-            </div>
-            <div>
-                <img src="" alt="">
-            </div>
-            <div>
-                <img src="" alt="">
+            <h2>Gráfico para tu empresa</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio.</p>
+            <div class="video__container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/tHGx6TJEPZs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </article>
+    </section>
+    <section>
+        <h2>Ellos me eligieron</h2>
+        <div class="grafico__logo--container">
+            <div class="grafico__logo">
+                <img src="../img/grafico-55.jpg" alt="55 detail shop autopartes">
+            </div>
+            <div class="grafico__logo">
+                <img src="../img/grafico-castilla.jpg" alt="isabel de castilla tienda de ropa">
+            </div>
+            <div class="grafico__logo">
+                <img src="../img/grafico-crystal.jpg" alt="crystal blue indie games">
+            </div>
+            <div class="grafico__logo">
+                <img src="../img/grafico-delirio.jpg" alt="delirio zapateria">
+            </div>
+        </div>
     </section>
     <footer>
         <article class="footer__container mx-auto">
