se termino de pasar el codigo css a sass

--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
 <!--Hero-->
     <article class="hero-container">
         <div class="hero-banner">
-            <p class="titulo-hero">¡Sé parte de mis<br><span>Nuevos Proyectos!</span></p>
+            <div class="hero-titulo">
+                <p class="titulo">¡Sé parte de mis</p>
+                <p class="subtitulo">Nuevos Proyectos!</p>
+            </div>
             <div class="boton-hero">
                 <a href="#start" class="boton">COMENZAR</a>
             </div>
@@ -62,7 +65,7 @@
 <!--Seccion Conoceme con acceso a la página Mi historia-->
     <article class="conoceme mx-auto" id="start">
         <div class="conoceme__foto-container">
-            <img src="./img/mi-historia.png" alt="fotografía de la diseñadora">
+            <img src="./img/mi-historia.webp" alt="fotografía de la diseñadora">
         </div> 
         <h1>¡Hola!<br>Soy Cherry</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima recusandae ut dolores molestias accusantium fugiat vel alias blanditiis beatae et. Facere tenetur, minima veniam ducimus hic consectetur dolores magnam in?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima recusandae ut dolores molestias accusantium fugiat vel alias blanditiis beatae et. </p>
