--- a/section/contacto.html
+++ b/section/contacto.html
@@ -55,7 +55,7 @@
         </div>
     </article> 
 <!-- formulario armado con los elementos de bootstrap -->
-    <section class="contactform__container">
+    <section class="contactform__container mx-auto">
         <div class="contactform__img">
             <img src="../img/Foto contacto.png" alt="dibujo de persona en un telefono movil">
         </div>
@@ -81,29 +81,31 @@
         </div>
     </section>
     <section class="contacto__section row mx-auto">
-        <div class="contacto__logos--container col-6 col-sm-3">
-            <div class="contacto__logo">
-                <img src="../img/Correo blanco.png" alt="logo de correo electronico">
+        <div>
+            <div class="contacto__logos--container col-6 col-sm-3">
+                <div class="contacto__logo">
+                    <img src="../img/Correo blanco.png" alt="logo de correo electronico">
+                </div>
+                <h3>ohcherry91@gmail.com</h3>
             </div>
-            <h3>ohcherry91@gmail.com</h3>
-        </div>
-        <div class="contacto__logos--container col-6 col-sm-3">
-            <div class="contacto__logo">
-                <img src="../img/what blanco.png" alt="logo de whatsapp">
+            <div class="contacto__logos--container col-6 col-sm-3">
+                <div class="contacto__logo">
+                    <img src="../img/what blanco.png" alt="logo de whatsapp">
+                </div>
+                <h3>3541-335996</h3>
             </div>
-            <h3>3541-335996</h3>
-        </div>
-        <div class="contacto__logos--container col-6 col-sm-3">
-            <div class="contacto__logo">
-                <img src="../img/insta blanco.png" alt="logo de instagram">
+            <div class="contacto__logos--container col-6 col-sm-3">
+                <div class="contacto__logo">
+                    <img src="../img/insta blanco.png" alt="logo de instagram">
+                </div>
+                <h3>@ohcherry</h3>
             </div>
-            <h3>@ohcherry</h3>
-        </div>
-        <div class="contacto__logos--container col-6 col-sm-3">
-            <div class="contacto__logo">
-                <img src="../img/Face blanco.png" alt="logo de facebook">
+            <div class="contacto__logos--container col-6 col-sm-3">
+                <div class="contacto__logo">
+                    <img src="../img/Face blanco.png" alt="logo de facebook">
+                </div>
+                <h3>@ohcherry</h3>
             </div>
-            <h3>@ohcherry</h3>
         </div>
     </section>
     <footer>
