--- a/section/historia.html
+++ b/section/historia.html
@@ -60,24 +60,26 @@
     <section class="sobreMi mx-auto">
         <h2>Sobre Mí</h2>
         <div class="sobreMi__img mx-auto">
-            <img src="../img/mi-historia.png" alt="fotografía de la diseñadora">
+            <img src="../img/dibujo-historia.png" alt="fotografía de la diseñadora">
         </div>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit repudiandae soluta, aliquid enim cupiditate molestiae consequatur. Rerum, commodi a alias quos est doloribus numquam minus voluptatem, blanditiis labore veritatis optio!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit repudiandae soluta, aliquid enim cupiditate molestiae consequatur. Rerum, commodi a alias quos est doloribus numquam minus voluptatem, blanditiis labore veritatis optio!</p>
     </section>
 <!--Seccion de trayectoria-->
     <section class="trayectoria mx-auto">
-        <h2>Trayectoria</h2>
-        <div class="trayectoria__img mx-auto">
-            <img src="../img/Foto contacto.png" alt="fotografía de la diseñadora">
+        <div class="trayectoria__container mx-auto">
+            <h2>Trayectoria</h2>
+            <div class="trayectoria__img mx-auto">
+                <img src="../img/dibujo-trayectoria.png" alt="fotografía de la diseñadora">
+            </div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit repudiandae soluta, aliquid enim cupiditate molestiae consequatur. Rerum, commodi a alias quos est doloribus numquam minus voluptatem, blanditiis labore veritatis optio!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit repudiandae soluta, aliquid enim cupiditate molestiae consequatur. Rerum, commodi a alias quos est doloribus numquam minus voluptatem, blanditiis labore veritatis optio!</p>
         </div>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit repudiandae soluta, aliquid enim cupiditate molestiae consequatur. Rerum, commodi a alias quos est doloribus numquam minus voluptatem, blanditiis labore veritatis optio!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit repudiandae soluta, aliquid enim cupiditate molestiae consequatur. Rerum, commodi a alias quos est doloribus numquam minus voluptatem, blanditiis labore veritatis optio!</p>
     </section>
 <!--Seccion de conocimientos-->
-    <section class="conocimientos">
+    <section class="conocimientos mx-auto">
         <div class="container">
             <h2 class="conocimientos__titulo">Conocimientos</h2>
             <div class="conocimientos__foto">
-                <img src="../img/Foto contacto.png" alt="fotografía de la diseñadora">
+                <img src="../img/dibujo-conocimiento.png" alt="fotografía de la diseñadora">
             </div>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit repudiandae soluta, aliquid enim cupiditate molestiae consequatur.</p>
             <div class="conocimientos__logo--container row">
