--- a/section/web.html
+++ b/section/web.html
@@ -56,7 +56,7 @@
     </article>
     <section>
         <div>
-            <h2>Paginas y redes</h2>
+            <h2>Páginas y redes</h2>
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -107,7 +107,7 @@
         </article>
     </section>
     <section>
-        <h2>Ellos me eligieron</h2>
+        <h3>Ellos me eligieron</h3>
         <div class="web__logo--container">
             <div class="web__logo">
                 <img src="../img/grafico-global.jpg" alt="global consultora">
