--- a/section/ilustraciones.html
+++ b/section/ilustraciones.html
@@ -57,7 +57,7 @@
     <section>
         <div>
             <h2>Trabajos de Ilustraciones</h2>
-            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div id="carouselExampleCaptions" class="carousel slide mx-auto" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -101,13 +101,13 @@
         <article>
             <h2>Tu Proyecto animado</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio.</p>
-            <div class="video__container">
+            <div class="video__container mx-auto">
                 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Iu4PiZbq9GI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </article>
     </section>
     <section>
-        <h2>Ellos me eligieron</h2>
+        <h3>Ellos me eligieron</h3>
         <div class="ilustraciones__logo--container">
             <div class="ilustraciones__logo">
                 <img src="../img/logo-Magico.jpg" alt="mundo magico jugueteria">
