se empezo a hacer responsive las paginas de ilustraciones

--- a/section/ilustraciones.html
+++ b/section/ilustraciones.html
@@ -54,7 +54,7 @@
             <h1 class="hero__ilustraciones--titulo">Ilustraciones</h1>
         </div>
     </article>
-    <section>
+    <section class="trabajos_ilustraciones">
         <div>
             <h2>Trabajos de Ilustraciones</h2>
             <div id="carouselExampleCaptions" class="carousel slide mx-auto" data-bs-ride="carousel">
@@ -97,7 +97,7 @@
             </div>
         </div>
     </section>
-    <section>
+    <section class="ilustraciones__video">
         <article>
             <h2>Tu Proyecto animado</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio.</p>
